==> homewsn/WiFi-WebRadio/ESP32/webradio/main/webradio.c <==
#include <stdio.h>
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_system.h"
#include "esp_wifi.h"
#include "esp_netif.h"
#include "esp_event.h"
#include "esp_spiffs.h"
#include "esp_http_server.h"
#include "esp_log.h"
#include "esp_mac.h"
#include "nvs.h"
#include "nvs_flash.h"
#include "driver/uart.h"
#include "lwip/sockets.h"
#include "lwip/netdb.h"
#include "wr_socket.h"
#include "vs1053.h"
#define RING_BUF_ENABLED           1
#include "ring_buf_audio.h"
#define WIFI_AP_SSID               "webradio"
#define MAX_LOCATION_LENGTH        256
#define MAX_SSID_LENGTH            (32 + 1)
#define MAX_PASSWORD_LENGTH        (63 + 1)
#define GET_ABOUT_HTML             "/about.html"
#define GET_ABOUT_HTML_FILE        "/spiffs/www/about.html"
#define GET_INDEX_HTML             "/"
#define GET_INDEX_HTML_FILE        "/spiffs/www/index.html"
#define GET_OPTIONS_HTML           "/options.html"
#define GET_OPTIONS_HTML_FILE      "/spiffs/www/options.html"
#define GET_STYLE_CSS              "/style.css"
#define GET_STYLE_CSS_FILE         "/spiffs/www/style.css"
#define GET_WEBRADIO_HTML          "/webradio.html"
#define GET_WEBRADIO_HTML_FILE     "/spiffs/www/webradio.html"
#define GET_WEBRADIO_JS            "/webradio.js"
#define GET_WEBRADIO_JS_FILE       "/spiffs/www/webradio.js"
#define GET_WIFIAP_HTML            "/wifiap.html"
#define GET_WIFIAP_HTML_FILE       "/spiffs/www/wifiap.html"
#define GET_WIFIAP_JS              "/wifiap.js"

static void load_list(const char* name, uint8_t **context, size_t *length)
{
    FILE* fp;
    size_t size;

    ESP_LOGI(TAG, "Reading from file %s", name);
    fp = fopen(name, "rb");
    if (fp == NULL)
    {
        *context = NULL;
        length = 0;
        ESP_LOGE(TAG, "Failed to open %s for reading", name);
		fatal_error();
        return;
    }
    fseek(fp, 0L, SEEK_END);
    size = ftell(fp);    
	// the last byte is for null (required for string functions in other procedures to count webradio.total_list_records)
	*context = (uint8_t *)malloc(size + 1);
    if (*context == NULL)
    {
        length = 0;
        ESP_LOGE(TAG, "Failed to allocate %d bytes", size);
		fatal_error();
        return;
    }
    fseek(fp, 0L, SEEK_SET);
    fread(*context, size, 1, fp);
    fclose(fp);
	*length = size;
}

static void save_list(const char* name, uint8_t *context, size_t length)
{
    FILE* fp;

    ESP_LOGI(TAG, "Writing to file %s", name);
    fp = fopen(name, "wb");
    if (fp == NULL)
    {
        ESP_LOGE(TAG, "Failed to open %s for writing", name);
		fatal_error();
        return;
    }
    fwrite(context, length, 1, fp);
    fclose(fp);
}

static int webradio_recv(short sock_id)
{
	static uint8_t recv_buf[RECV_BUFFER_SIZE];
    volatile int res;
	size_t len;
	uint32_t status;

	webradio_recv_cb(NULL, 0, true);
	while (1)
	{
        res = wr_recv(sock_id, &recv_buf, sizeof(recv_buf), 0);
		len = (uint32_t)res;
		if (res < 0)
		{
            ESP_LOGI(TAG, "TCP packet reception error.");
		    res = wr_close(sock_id);
			if (res < 0)
			{
				fatal_error();
			}
			return -1;
		}
		if (res == 0)
		{
            ESP_LOGI(TAG, "Connection closed.");
		    res = wr_close(sock_id);
			if (res < 0)
			{
				fatal_error();
			}
			return -2;
		}
#ifdef DEBUG_INT
		check_debug_int(&tcp_debug_int, len);
#endif
		if (webradio_state == webradio_load_location)
		{
			// New location
		    res = wr_close(sock_id);
			if (res < 0)
			{
				fatal_error();
			}
			return -3;
		}
		if (webradio_state == webradio_html_header)
		{
			res = check_html_header_status_code(recv_buf, len, &status);
			if (res < 0)
			{
				fatal_error();
			}
			if (status != 200)
			{
				// Redirect or error
			    res = wr_close(sock_id);
				if (res < 0)
				{
					fatal_error();
				}
				if (webradio.use_list == false)
				{
					// redirect
					return 0;
				}
				else
				{
					// error
					return -4;
				}
			}
		}
		if (webradio_state == webradio_not_connected)
		{
			// change WiFi AP
		    res = wr_close(sock_id);
			if (res < 0)
			{
				fatal_error();
			}
			return 0;
		}
		res = webradio_recv_cb(recv_buf, len, false);
		if (res < 0)
		{
			// Not supported
            ESP_LOGI(TAG, "Error in audio stream parsing.");
		    res = wr_close(sock_id);
			if (res < 0)
			{
				fatal_error();
			}
			set_next_webradio();
			return -5;
		}
        delay_ms(10);
	}
}

static int webradio_connect(const char *uri, int *sock_id)
{
	char *domain;
	size_t domain_len = 0;
	char *url;
	char *urn;
	size_t urn_len = 0;
	char *delim;
	size_t port = 0;
	bool is_secured = false;
	uint32_t ip_addr;
	volatile int res;
	char *get_request;

	url = (char *)uri;
	if (strncasecmp(url, HTTP_PREFIX, sizeof(HTTP_PREFIX) - 1) == 0)
	{
		url += sizeof(HTTP_PREFIX) - 1;
	}
	else if (strncasecmp(url, HTTPS_PREFIX, sizeof(HTTPS_PREFIX) - 1) == 0)
	{
		is_secured = true;
		url += sizeof(HTTPS_PREFIX) - 1;
	}
	delim = strchr(url, ':');
	if (delim != NULL)
	{
		domain_len = delim - url;
		port = strtoul((delim + 1), NULL, 10);
	}
	else
	{
		if (is_secured)
		{
			port = 443;
		}
		else
		{
			port = 80;
		}
	}
    ESP_LOGI(TAG, "port: %d or 0x%04X", port, port);
	delim = strchr(url, '/');
	if (delim != NULL)
	{
		if (!domain_len)
		{
			domain_len = delim - url;
		}
		urn = delim + 1;
		urn_len = strlen(urn);
	}
	else
	{
		if (!domain_len)
		{
			domain_len = strlen(url);
		}
		urn = NULL;
		urn_len = 0;
	}
	if (!domain_len)
	{
		return -1;
	}

	domain = malloc(domain_len + 1);
	if (!domain)
	{
		return -2;
	}
	domain[domain_len] = '\0';
	strncpy(domain, url, domain_len);

    ESP_LOGI(TAG, "call gethostbyname for domain: %s", domain);
    struct hostent *host_info = gethostbyname((const char *)domain);
	if (!host_info)
	{
        ESP_LOGE(TAG, "gethostbyname error for domain: %s", domain);
		free(domain);
		return -3;
	}
    ip_addr = (*(((struct in_addr **)host_info->h_addr_list)[0])).s_addr;
    ESP_LOGI(TAG, "ip_addr: 0x%08lX", ip_addr);
	if (ip_addr == IPADDR_NONE)
	{
        ESP_LOGE(TAG, "ip_addr error for domain: %s", domain);
		free(domain);
		return -3;
	}

	// Creating a TCP socket
	if (is_secured)
	{
		*sock_id = wr_socket(AF_INET, WR_HTTPS_SOCKET, IPPROTO_IP);
	}
	else
	{
		*sock_id = wr_socket(AF_INET, WR_HTTP_SOCKET, IPPROTO_IP);
	}
	if (*sock_id < 0)
	{
		return -4;
	}
    ESP_LOGI(TAG, "sock_id: %d", *sock_id);
	// Connecting to TCP server
    struct sockaddr_in addr = { 0 };
    addr.sin_addr.s_addr = ip_addr;
    addr.sin_family = AF_INET;
    addr.sin_port = htons(port);
	res = wr_connect(*sock_id, (struct sockaddr *)&addr, sizeof(addr));
	if (res != 0)
	{
		wr_close(*sock_id);
        ESP_LOGE(TAG, "Failed to connect to IP: 0x%08lX, port: %d, error %d %s0x%04X", addr.sin_addr.s_addr, port, res, res < 0 ? "-" : "", res < 0 ? -(unsigned)res : res);
		free(domain);
		return -5;
	}

	// Send GET request
	get_request = malloc(sizeof(GET_REQUEST_FORMAT) + domain_len + urn_len);
	if (!get_request)
	{
		wr_close(*sock_id);
		free(domain);
		return -6;
	}
	sprintf(get_request, GET_REQUEST_FORMAT, urn, domain);
	res = wr_send(*sock_id, get_request, strlen(get_request), 0 );
	free(get_request);
	free(domain);
	if (res < 0)
	{
            ESP_LOGE(TAG, "Failed to send to IP: 0x%08lX, port: %d, error %d", addr.sin_addr.s_addr, port, res);
		wr_close(*sock_id);
		return -7;
	}
	return 0;
}

static int wifi_ap_connect(wifi_config_t *wifi_config)
{
	size_t cnt = 0;

    ESP_LOGI(TAG, "Trying to connect to WiFi AP, SSID=%s, Password=%s", wifi_config->sta.ssid, wifi_config->sta.password);

    ESP_ERROR_CHECK(esp_wifi_set_mode(WIFI_MODE_STA));
    ESP_ERROR_CHECK(esp_wifi_set_config(ESP_IF_WIFI_STA, wifi_config));
    ESP_ERROR_CHECK(esp_wifi_start());

	while (webradio_state != webradio_link_connected && cnt < IP_ACQUIRED_WAIT_SEC)
	{
        delay_ms(1000);
		cnt++;
	}
	if (webradio_state != webradio_link_connected)
	{
        ESP_LOGI(TAG, "Failed to connect to AP %s", wifi_config->sta.ssid);
		return -1;
	}

	return 0;
}
