==> homewsn/WiFi-WebRadio/CC3235SF/webradio/src/webradio.c <==
#include <unistd.h>
#include <string.h>
#include <stdio.h>
#include <ti/drivers/net/wifi/simplelink.h>
#include <ti/drivers/net/wifi/slnetifwifi.h>
#include <ti/drivers/GPIO.h>
#include <ti/drivers/SPI.h>
#include <ti/drivers/UART2.h>
#include <ti/drivers/Power.h>
#include "uart_term.h"
#include "pthread.h"
#include "vs1053.h"
#include "ring_buf_audio.h"
#define dprintf  Report
#define dprintf
#define fatal_error()
#define SL_STOP_TIMEOUT            (200)
#define WIFI_AP_SSID               "webradio"
#define WIFI_AP_SSID_NAME          "homewsn"
#define WIFI_AP_SECURITY_KEY       "JJgte56wp_sd945"
#define MAX_LOCATION_LENGTH  256
#define MAX_SSID_LENGTH       (32 + 1)
#define MAX_PASSWORD_LENGTH   (63 + 1)
#define GET_WIFI_AP_CGI            "/get_wifiap.cgi"
#define POST_WIFI_AP_CGI           "/post_wifiap.cgi"
#define GET_WEBRADIO_CGI           "/get_webradio.cgi"
#define POST_WEBRADIO_CGI          "/post_webradio.cgi"
#define WIFI_AP_LIST               "/options/wifiap.lst"
#define WEBRADIO_LIST              "/options/webradio.lst"
#define GET_WIFI_MODE_JS           "/mode.js"
#define IP_ACQUIRED_WAIT_SEC       6
#define SL_TASK_STACK_SIZE         4096
#define SL_TASK_PRIORITY           9
#define PLAY_TASK_STACK_SIZE       1024
#define PLAY_TASK_PRIORITY         1
#define RECV_BUFFER_SIZE           1024
#define PLAY_BUFFER_SIZE           256
#define ICY_BUFFER_SIZE            1024

static void load_list(const char* name, uint8_t **context, size_t *length)
{
	int32_t handle = -1;
	unsigned long token = 0;
	volatile int32_t res;
	SlFsFileInfo_t info;

	handle = sl_FsOpen((unsigned char *)name, SL_FS_READ, &token);
	res = sl_FsGetInfo((unsigned char *)name, token, &info);
	*length = info.Len;
	// the last byte is for null (required for string functions in other procedures to count webradio.total_list_records)
	*context = (uint8_t *)malloc(info.Len + 1);
	*(*context + info.Len) = 0;
	res = sl_FsRead(handle, 0, *context, info.Len);
	res = sl_FsClose(handle, NULL, NULL , 0);
}

static void save_list(const char* name, uint8_t *context, size_t length)
{
	int32_t handle = -1;
	unsigned long token = 0;
	volatile int32_t res;

	handle = sl_FsOpen((unsigned char *)name, SL_FS_OVERWRITE, &token);
	res = sl_FsWrite(handle, 0, context, length);
	res = sl_FsClose(handle, NULL, NULL , 0);
}

static int webradio_recv(short sock_id)
{
	static uint8_t recv_buf[RECV_BUFFER_SIZE];
    long non_blocking = 1;
    volatile int32_t res;
	size_t len;
	uint32_t status;

	// setting socket option to make the socket as non blocking
	res = sl_SetSockOpt(sock_id, SL_SOL_SOCKET, SL_SO_NONBLOCKING, &non_blocking, sizeof(non_blocking));
	webradio_recv_cb(NULL, 0, true);
	while (1)
	{
		res = sl_Recv(sock_id, &recv_buf, sizeof(recv_buf), 0);
		len = (uint32_t)res;
		if (res == SL_ERROR_BSD_EAGAIN)
		{
			usleep(1000);
			continue;
		}
		if (res < 0)
		{
	        dprintf("TCP packet reception error.\r\n");
		    res = sl_Close(sock_id);
			if (res < 0)
			{
				fatal_error();
			}
			return -1;
		}
		if (res == 0)
		{
	        dprintf("Connection closed.\r\n");
		    res = sl_Close(sock_id);
			if (res < 0)
			{
				fatal_error();
			}
			return -2;
		}
#ifdef DEBUG_INT
		check_debug_int(&tcp_debug_int, len);
#endif
		if (webradio_state == webradio_load_location)
		{
			// New location
		    res = sl_Close(sock_id);
			if (res < 0)
			{
				fatal_error();
			}
			return -3;
		}
		if (webradio_state == webradio_html_header)
		{
			res = check_html_header_status_code(recv_buf, len, &status);
			if (res < 0)
			{
				fatal_error();
			}
			if (status != 200)
			{
				// Redirect or error
			    res = sl_Close(sock_id);
				if (res < 0)
				{
					fatal_error();
				}
				if (webradio.use_list == false)
				{
					// redirect
					return 0;
				}
				else
				{
					// error
					return -4;
				}
			}
		}
		if (webradio_state == webradio_not_connected)
		{
			// change WiFi AP
		    res = sl_Close(sock_id);
			if (res < 0)
			{
				fatal_error();
			}
			return 0;
		}
		res = webradio_recv_cb(recv_buf, len, false);
		if (res < 0)
		{
			// Not supported
	        dprintf("Error in audio stream parsing.\r\n");
		    res = sl_Close(sock_id);
			if (res < 0)
			{
				fatal_error();
			}
			set_next_webradio();
			return -5;
		}
	}
}

static int webradio_connect(const char *uri, short *sock_id)
{
	char *domain;
	size_t domain_len = 0;
	char *url;
	char *urn;
	size_t urn_len = 0;
	char *delim;
	size_t port = 0;
	bool is_secured = false;
	uint32_t ip_addr;
	volatile int32_t res;
	char *get_request;

	url = (char *)uri;
	if (strncasecmp(url, HTTP_PREFIX, sizeof(HTTP_PREFIX) - 1) == 0)
	{
		url += sizeof(HTTP_PREFIX) - 1;
	}
	else if (strncasecmp(url, HTTPS_PREFIX, sizeof(HTTPS_PREFIX) - 1) == 0)
	{
		is_secured = true;
		url += sizeof(HTTPS_PREFIX) - 1;
	}
	delim = strchr(url, ':');
	if (delim != NULL)
	{
		domain_len = delim - url;
		port = strtoul((delim + 1), NULL, 10);
	}
	else
	{
		if (is_secured)
		{
			port = 443;
		}
		else
		{
			port = 80;
		}
	}
	delim = strchr(url, '/');
	if (delim != NULL)
	{
		if (!domain_len)
		{
			domain_len = delim - url;
		}
		urn = delim + 1;
		urn_len = strlen(urn);
	}
	else
	{
		if (!domain_len)
		{
			domain_len = strlen(url);
		}
		urn = NULL;
		urn_len = 0;
	}
	if (!domain_len)
	{
		return -1;
	}

	domain = malloc(domain_len + 1);
	if (!domain)
	{
		return -2;
	}
	domain[domain_len] = '\0';
	strncpy(domain, url, domain_len);

	res = sl_NetAppDnsGetHostByName((signed char *)domain, domain_len, (unsigned long *)&ip_addr, SL_AF_INET);
	if (res < 0)
	{
		free(domain);
		return -3;
	}

	// Creating a TCP socket
	if (is_secured)
	{
		*sock_id = sl_Socket(SL_AF_INET, SL_SOCK_STREAM, SL_SEC_SOCKET);
	}
	else
	{
		*sock_id = sl_Socket(SL_AF_INET, SL_SOCK_STREAM, SL_IPPROTO_TCP);
	}
	if (*sock_id < 0)
	{
		return -4;
	}
	// Connecting to TCP server
	SlSockAddrIn_t addr = { 0 };
	addr.sin_family = SL_AF_INET;
	addr.sin_port = sl_Htons((unsigned short)port);
	addr.sin_addr.s_addr = sl_Htonl((unsigned int)ip_addr);
	res = sl_Connect(*sock_id, (SlSockAddr_t *)&addr, sizeof(addr));
	if (res < 0 && res != SL_ERROR_BSD_ESECSNOVERIFY)
	{
		sl_Close(*sock_id);
		dprintf("Failed to connect to the web radio server.\r\n");
		free(domain);
		return -5;
	}

	// Send GET request
	get_request = malloc(sizeof(GET_REQUEST_FORMAT) + domain_len + urn_len);
	if (!get_request)
	{
		sl_Close(*sock_id);
		free(domain);
		return -6;
	}
	sprintf(get_request, GET_REQUEST_FORMAT, urn, domain);
	res = sl_Send(*sock_id, get_request, strlen(get_request), 0 );
	free(get_request);
	free(domain);
	if (res < 0)
	{
		sl_Close(*sock_id);
		return -7;
	}
	return 0;
}

static int wifi_ap_connect(SlWlanSecParams_t *sec_params, char *ssid)
{
	size_t cnt = 0;
	int32_t res;

	dprintf("Please wait...trying to connect to the AP\n\r");
	dprintf("\n\r");
	res = sl_WlanConnect((signed char*)ssid, strlen(ssid), 0, sec_params, 0);
	if (res < 0)
	{
		return -1;
	}

	while (webradio_state != webradio_link_connected && cnt < IP_ACQUIRED_WAIT_SEC)
	{
		sleep(1);
		cnt++;
	}
	if (webradio_state != webradio_link_connected)
	{
		dprintf("Failed to connect to AP %s\n\r", ssid);
		return -2;
	}
	return 0;
}
